# napalm

./: .coverage  .coveragerc  .dockerignore  .editorconfig  .gitignore  .python-version  .readthedocs.yml  .travis.yml  AUTHORS  Dockerfile  MANIFEST.in  Makefile  Manifest.in  NOTICE  README.md  docker_develop.sh  docker_release.sh  example_ros.py  fi.py  mypy.ini  pylama.ini  recorder_demo.py  report.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  supported_getters  supported_methods  tags  test.txt  tox.ini
.github/: ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE  dependabot.yml
ansible/: napalm_get_facts  napalm_install_config
base/: README.md  requirements.txt
cumulus/: .gitignore  AUTHORS  MANIFEST.in  README.md  requirements-dev.txt  tox.ini
docs/: Makefile  ansible-module.j2  base.rst  build-ansible-module-docs.sh  cli.rst  conf.py  doc-requirements.txt  eos.rst  first_steps.rst  first_steps_config.rst  index.rst  installation.rst  logs.rst  matrix.j2  requirements.txt  tags  test.sh  yang.rst
drivers/: base.py  eos.py  iosxr.py  junos.py
eos/: .gitignore
ios/: .travis.yml  README.md
iosxr/: .gitignore  AUTHORS  MANIFEST.in  requirements-dev.txt  setup.py
junos/: README.md
napalm/: 1  SUPPORTED_DRIVERS.json  _SUPPORTED_DRIVERS.py  __init__.py  base.py  eos.py  exceptions.py  fortios.py  ibm.py  ios.py  iosxr.py  junos.py  junos.views  nxos.py  pluribus.py
napalm_base/: __init__.py  base.py  constants.py  exceptions.py  helpers.py  mock.py  system_helpers.py  validate.py
napalm_cumulus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
napalm_eos/: eos.py  (+1 more)
(+2670 files in other folders)
