[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[pylama]
linters = mccabe,pep8,pyflakes
ignore = D203,C901,E203
skip = .tox/*

[pylama:pep8]
max_line_length = 100

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    dist
    build
    south_migraitons
    migrations
    napalm/base/test
python_files =
    test_*.py
    *_test.py
    tests.py
json_report = report.json
jsonapi = true

[coverage:run]
include =
    napalm/*

[coverage:report]
omit =
    napalm/base/test/*
    napalm/base/clitools/*
