[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[pylama]
linters = mccabe,pep8,pyflakes
ignore = D203,C901,E203
skip = .tox/*

[pylama:pep8]
max_line_length = 100

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    dist
    build
    south_migraitons
    migrations
    napalm/base/test
python_files =
    test_*.py
    *_test.py
    tests.py
json_report = report.json
jsonapi = true

[mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
python_version = 3.6
check_untyped_defs = False
disallow_any_generics = True
disallow_untyped_calls = False
disallow_untyped_defs = False
disallow_incomplete_defs = True
disallow_untyped_decorators = True
ignore_errors = False
ignore_missing_imports = True
strict_optional = False
# warn_unused_configs = True
# warn_unused_ignores = True
# warn_return_any = True
# warn_redundant_casts = True

[coverage:run]
include =
    napalm/*

[coverage:report]
omit =
    napalm/base/test/*
    napalm/base/clitools/*
